# SASS

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  config_template.yml  constants.py  mp_global_param.py  pyproject.toml  query_main.py  run_omega.py  run_rocs.py  submit_omega.sh  submit_rocs.sh  utils_data.py  utils_general.py  utils_mol.py  utils_query.py
config/: pip.conf
data/: reactions.txt
data/example_library/: README.md  synthons.txt
notebooks/: analyze_results.ipynb
sass/: __init__.py  cli.py  config_template.yml  query_main.py
sass/utils/: __init__.py  utils_confgen.py  utils_dask.py  utils_data.py  utils_general.py  utils_libgen.py  utils_mol.py  utils_overlay.py  utils_query.py
tests/: __init__.py  pyproject.toml  test_utils_confgen.py  test_utils_libgen.py  test_utils_mol.py  test_utils_overlay.py  test_utils_query.py
tests/data/: 5349414_U_Np_50_conf.oez  __init__.py  example_gt_res.pkl  expected_rocs_scores.json  rocs_test_conf1.sdf  rocs_test_conf2.sdf  test_query_1.sdf  test_query_4.sdf  test_workflow_rescore_res.pkl
